# ugs

./: .gitignore  CMakeLists.txt  README.md
.github/: release.yml
.github/workflows/: ci.yml  gui-smoke.yml
cmake/: FetchAndUnpack.cmake  PrepareUgsSources.cmake  ProjectConfig.cmake.in  Uninstall.cmake.in
tests/: CMakeLists.txt
tests/cases/01_smoke/: expected.txt  xwindowc_smoke.c
tests/cases/02_tryxw/: tryxw.f
tests/cases/03_visual_smoke/: expected.ppm  run_visual_smoke.cmake
tests/package_smoke/: CMakeLists.txt  run_package_smoke.cmake
